Minor fix for API deprecation
[skip ci]